fixed annoying UI bug where the highlight effect on the action menu items was rendering too wide on hover

--- a/web-app/css/openboxes.css
+++ b/web-app/css/openboxes.css
@@ -315,7 +315,6 @@ th a:link, th a:visited, th a:hover {
     display: block;
     font-size: 10px;
     text-decoration: none;
-    width: 100%;
 }
 th.asc a, th.desc a {
     background-position: right;
